# openagent-pal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  p2p_global_probe_40_60_80_100.md  requirements.txt
P2P大规模/: .gitignore  README.md  pyproject.toml
P2P大规模/configs/: workload_char_public_discovery_n100.yaml  workload_char_public_discovery_two_stage_n100.yaml  workload_char_public_discovery_two_stage_n100_evidence_pack.yaml
P2P大规模/reports/: sparse_demand_experiments_unified_20260407.md  sparse_demand_repro_guide.md
P2P大规模/reports/sparse_demand_paper_pack_20260407/: manifest_inputs_used.json  sparse_demand_main_table.csv  sparse_demand_main_table.md  sparse_demand_main_table.tex  sparse_demand_metric_definitions.md  sparse_demand_results_summary_cn.md  sparse_demand_results_summary_en.md  sparse_demand_section_snippet.tex
P2P大规模/scripts/: capacity_bootstrap_remote_cluster.py  discovery_workload_aggregate.py  discovery_workload_char_probe.py  discovery_workload_evidence_pack.py  discovery_workload_lib.py  discovery_workload_remote_bench.py  generate_sparse_demand_paper_pack.py
P2P大规模/tests/: test_discovery_workload_char.py
app/: main.py
p2p_capacity_work/scripts/: scalebench_aggregate_breakpoint.py  scalebench_breakpoint_sweep.py  scalebench_capacity_lib.py  scalebench_collect_events.py  scalebench_compare.py  scalebench_diagnose.py  scalebench_matrix.py  scalebench_orchestrate.py  scalebench_plot_breakpoint.py  scalebench_remote_bench.py  (+3 more)
scripts/: dev.sh
spec/: canonical-event.v0.1.schema.json  openagent-phase-a-baseline-v0.1.md
(+5 files in other folders)
