[project]
name = "openagent-sim"
version = "0.1.0"
description = "Discrete-event protocol-level simulation for OpenAgent experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.3",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
openagent-sim = "openagent_sim.cli:main"

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
